RESOLVED FIXED287033
REGRESSION (287736@main?): [ iOS ] fast/mediastream/microphone-interruption-and-audio-session.html is constantly failing.
https://bugs.webkit.org/show_bug.cgi?id=287033
Summary REGRESSION (287736@main?): [ iOS ] fast/mediastream/microphone-interruption-a...
Yasmin Karimi
Reported 2025-02-04 11:36:48 PST
fast/mediastream/microphone-interruption-and-audio-session.html This test is a constant failure on iOS simulator. HISTORY: https://results.webkit.org/?suite=layout-tests&test=fast%2Fmediastream%2Fmicrophone-interruption-and-audio-session.html TEXT DIFF: @@ -1,3 +1,3 @@ -PASS AudioSession category should staty to PlayAndRecord when interrupted, not when muted by user +FAIL AudioSession category should staty to PlayAndRecord when interrupted, not when muted by user promise_test: Unhandled rejection with value: "rejected mute for onMutePromise2" DIFF URL: https://build.webkit.org/results/Apple-iOS-18-Simulator-Debug-WK2-Tests/287736@main%20(24)/fast/mediastream/microphone-interruption-and-audio-session-pretty-diff.html REPRODUCIBILITY: I was able to reproduce this issue on the iOS 18.2 simulator at ToT using the following command: run-webkit-tests --ios-simulator fast/mediastream/microphone-interruption-and-audio-session.html --iterations 5 REGRESSION: Contextual information indicates the probable regression point is 287736@main. The code paths changed in this commit appear to be directly related to the progression point: 287602@main, where tests were passing until 287736@main.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-04 11:37:00 PST
EWS
Comment 2 2025-03-03 11:23:48 PST
Test gardening commit 291508@main (f7e4cad2dfa1): <https://commits.webkit.org/291508@main> Reviewed commits have been landed. Closing PR #40002 and removing active labels.
youenn fablet
Comment 3 2025-09-04 00:52:46 PDT
EWS
Comment 4 2025-09-08 00:21:44 PDT
Committed 299686@main (20364996cad7): <https://commits.webkit.org/299686@main> Reviewed commits have been landed. Closing PR #50292 and removing active labels.
WebKit Commit Bot
Comment 5 2025-09-10 16:27:31 PDT
Re-opened since this is blocked by bug 298689
youenn fablet
Comment 6 2025-09-11 06:44:14 PDT
EWS
Comment 7 2025-09-15 23:56:42 PDT
Committed 300015@main (755ea5bdabcb): <https://commits.webkit.org/300015@main> Reviewed commits have been landed. Closing PR #50597 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.