REGRESSION (287736@main?): [ iOS ] fast/mediastream/microphone-interruption-and-audio-session.html is constantly failing. rdar://144177133 https://bugs.webkit.org/show_bug.cgi?id=287033

Reviewed by Eric Carlson.

Make sure that interruption observers registered are preserved when changing of AudioSession singleton.
This is in particular useful in GPUProcess where we might sometime register the observers on the dunmmy audio session.
We also update the test to make sure capture tracks are stopped explicitly.

* LayoutTests/fast/mediastream/microphone-interruption-and-audio-session.html:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/platform/audio/AudioSession.cpp:
(WebCore::AudioSession::setSharedSession):

Canonical link: https://commits.webkit.org/299686@main